# delta-kernel-rs

./: Cargo.toml
acceptance/: Cargo.toml
ffi/: Cargo.toml
ffi/src/: engine_data.rs
kernel/: Cargo.toml
kernel/examples/inspect-table/: Cargo.toml
kernel/examples/read-table-multi-threaded/: Cargo.toml
kernel/examples/read-table-single-threaded/: Cargo.toml
kernel/src/: arrow.rs  parquet.rs
kernel/src/engine/default/: filesystem.rs  parquet.rs
kernel/src/engine/parquet_row_group_skipping/: tests.rs
kernel/src/engine/sync/: parquet.rs
