[workspace]
members = [
    "acceptance",
    "derive-macros",
    "ffi",
    "kernel",
    "kernel/examples/*",
    "test-utils",
    "feature-tests",
]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["acceptance", "kernel"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://delta.io"
keywords = ["deltalake", "delta", "datalake"]
license = "Apache-2.0"
repository = "https://github.com/delta-io/delta-kernel-rs"
readme = "README.md"
rust-version = "1.80"
version = "0.6.1"

[workspace.dependencies]
# When changing the arrow version range, also modify ffi/Cargo.toml which has
# its own arrow version ranges witeh modified features. Failure to do so will
# result in compilation errors as two different sets of arrow dependencies may
# be sourced
arrow = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-arith = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-array = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-buffer = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-cast = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-data = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-ord = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-json = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-select = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-schema = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
parquet = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics", features = ["object_store"] }
object_store = { git = "https://github.com/rok/arrow-rs.git"  }

hdfs-native-object-store = "0.12.0"
hdfs-native = "0.10.0"
walkdir = "2.5.0"
